; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tg3.c_tg3_phy_cl45_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tg3.c_tg3_phy_cl45_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tg3 = type { i32 }

@MII_TG3_MMD_CTRL = common dso_local global i32 0, align 4
@MII_TG3_MMD_ADDRESS = common dso_local global i32 0, align 4
@MII_TG3_MMD_CTRL_DATA_NOINC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tg3*, i32, i32, i32*)* @tg3_phy_cl45_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tg3_phy_cl45_read(%struct.tg3* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.tg3*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.tg3* %0, %struct.tg3** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load %struct.tg3*, %struct.tg3** %5, align 8
  %11 = load i32, i32* @MII_TG3_MMD_CTRL, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @tg3_writephy(%struct.tg3* %10, i32 %11, i32 %12)
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %9, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  br label %40

17:                                               ; preds = %4
  %18 = load %struct.tg3*, %struct.tg3** %5, align 8
  %19 = load i32, i32* @MII_TG3_MMD_ADDRESS, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @tg3_writephy(%struct.tg3* %18, i32 %19, i32 %20)
  store i32 %21, i32* %9, align 4
  %22 = load i32, i32* %9, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %17
  br label %40

25:                                               ; preds = %17
  %26 = load %struct.tg3*, %struct.tg3** %5, align 8
  %27 = load i32, i32* @MII_TG3_MMD_CTRL, align 4
  %28 = load i32, i32* @MII_TG3_MMD_CTRL_DATA_NOINC, align 4
  %29 = load i32, i32* %6, align 4
  %30 = or i32 %28, %29
  %31 = call i32 @tg3_writephy(%struct.tg3* %26, i32 %27, i32 %30)
  store i32 %31, i32* %9, align 4
  %32 = load i32, i32* %9, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %25
  br label %40

35:                                               ; preds = %25
  %36 = load %struct.tg3*, %struct.tg3** %5, align 8
  %37 = load i32, i32* @MII_TG3_MMD_ADDRESS, align 4
  %38 = load i32*, i32** %8, align 8
  %39 = call i32 @tg3_readphy(%struct.tg3* %36, i32 %37, i32* %38)
  store i32 %39, i32* %9, align 4
  br label %40

40:                                               ; preds = %35, %34, %24, %16
  %41 = load i32, i32* %9, align 4
  ret i32 %41
}

declare dso_local i32 @tg3_writephy(%struct.tg3*, i32, i32) #1

declare dso_local i32 @tg3_readphy(%struct.tg3*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
